--- a/app/index.html
+++ b/app/index.html
@@ -2,28 +2,65 @@
 <html lang="">
 
 <head>
-
 	<meta charset="utf-8">
 	<title>OptimizedHTML 5</title>
-	<meta name="description" content="Startup HTML template OptimizedHTML 5">
+	<meta name="description" content="Авто-Експрес">
 	<meta name="viewport" content="width=device-width">
-	<link rel="icon" href="img/favicon.png">
+	<link rel="icon" href="images/favicon.png">
 	<meta property="og:image" content="img/dest/preview.jpg">
 	<link rel="stylesheet" href="css/app.min.css">
-
 </head>
 
 <body>
-
-	<!-- CUSTOM HTML -->
-
-	<div class="container" style="max-width: 700px; margin: auto">
-
-		<img src="images/dest/preview.jpg" alt="Start HTML5 Template" width="100%"><br><br>
-		<h2>Welcome to startup HTML template OptimizedHTML 5!</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam reprehenderit nulla alias expedita a qui, pariatur doloremque ipsa fugit laboriosam odio iure recusandae laborum delectus praesentium magni reiciendis voluptatem. Sed.</p>
-
+<header class="header sticky-top">
+	<div class="container-md">
+		<nav class="navbar navbar-expand-md navbar-light p-0">
+			<a class="navbar-brand" href="#">
+				<img class="img-fluid" src="images/dest/logo.svg" alt="logo">
+			</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Головна <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Про нас</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Послуги</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Галерея</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Контакти</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
 	</div>
+</header>
+<section class="welcome-page">
+
+	<div class="container-md vertical-center">
+		<div class="jumbotron-fluid text-center">
+			<h1 class="display-2">Привет, мир!</h1>
+			<p class="lead pb-5">Это простой пример блока с компонентом в стиле jumbotron для привлечения дополнительного внимания к содержанию или информации.</p>
+			<p>Использются служебные классы для типографики и расстояния содержимого в контейнере большего размера.</p>
+			<p class="lead">
+				<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+			</p>
+		</div>
+	</div>
+</section>
+
+<section class="about">
+	khjwuwjhkr
+</section>
+
 
 	<script src="js/app.min.js"></script>
 
