--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>OptimizedHTML 5</title>
+	<title>Авто-Експрес</title>
 	<meta name="description" content="Авто-Експрес">
 	<meta name="viewport" content="width=device-width">
 	<link rel="icon" href="images/favicon.png">
@@ -11,43 +11,44 @@
 	<link rel="stylesheet" href="css/app.min.css">
 </head>
 
-<body>
-<header class="header sticky-top">
-	<div class="container-md">
-		<nav class="navbar navbar-expand-md navbar-light p-0">
-			<a class="navbar-brand" href="#">
-				<img class="img-fluid" src="images/dest/logo.svg" alt="logo">
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Головна <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Про нас</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Послуги</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Галерея</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Контакти</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</div>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
+<header id="header" class="header sticky-top">
+	<nav class="navbar navbar-expand-md navbar-dark px-md-5">
+		<a class="navbar-brand" href="#">
+			<img class="img-fluid" src="images/dest/logo.svg" alt="logo">
+		</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse justify-content-end px-2" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="#header">Головна <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#about">Про нас</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Послуги</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Галерея</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Контакти</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
 </header>
 <section class="welcome-page">
 
 	<div class="container-md vertical-center">
 		<div class="jumbotron-fluid text-center">
-			<h1 class="display-2">Привет, мир!</h1>
+			<div class="header-h1">
+				<h1>Пасажирські перевезення по Україні</h1>
+			</div>
+
 			<p class="lead pb-5">Это простой пример блока с компонентом в стиле jumbotron для привлечения дополнительного внимания к содержанию или информации.</p>
 			<p>Использются служебные классы для типографики и расстояния содержимого в контейнере большего размера.</p>
 			<p class="lead">
@@ -57,7 +58,7 @@
 	</div>
 </section>
 
-<section class="about">
+<section id="about" class="about">
 	khjwuwjhkr
 </section>
 
