Customize jumbotrone button

--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Авто-Експрес</title>
-	<meta name="description" content="Авто-Експрес">
+	<title>Пасажирські перевезення</title>
+	<meta name="description" content="Пасажирські перевезення Авто-Експрес">
 	<meta name="viewport" content="width=device-width">
 	<link rel="icon" href="images/favicon.png">
 	<meta property="og:image" content="img/dest/preview.jpg">
@@ -20,7 +20,7 @@
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<div class="collapse navbar-collapse justify-content-end px-2" id="navbarNav">
+		<div class="collapse navbar-collapse justify-content-end px-2 text-center" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item">
 					<a class="nav-link" href="#header">Головна <span class="sr-only">(current)</span></a>
@@ -44,16 +44,16 @@
 <section class="welcome-page">
 
 	<div class="container-md vertical-center">
-		<div class="jumbotron-fluid text-center">
+		<div class="jumbotron-fluid text-center mt-5">
 			<div class="header-h1">
 				<h1>Пасажирські перевезення по Україні</h1>
 			</div>
-
-			<p class="lead pb-5">Это простой пример блока с компонентом в стиле jumbotron для привлечения дополнительного внимания к содержанию или информации.</p>
+			<p class="pb-5">Найлегший спосіб подорожувати</p>
 			<p>Использются служебные классы для типографики и расстояния содержимого в контейнере большего размера.</p>
-			<p class="lead">
-				<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-			</p>
+			<div class="mt-5 text-uppercase">
+				<a class="btn btn-danger btn-lg mx-3" href="#about" role="button">Знати більше</a>
+				<a class="btn btn-dark btn-lg mx-3" href="#contacts" role="button">Контакти</a>
+			</div>
 		</div>
 	</div>
 </section>
