--- a/app/index.html
+++ b/app/index.html
@@ -2,68 +2,71 @@
 <html lang="">
 
 <head>
-	<meta charset="utf-8">
-	<title>Пасажирські перевезення</title>
-	<meta name="description" content="Пасажирські перевезення Авто-Експрес">
-	<meta name="viewport" content="width=device-width">
-	<link rel="icon" href="images/favicon.png">
-	<meta property="og:image" content="img/dest/preview.jpg">
-	<link rel="stylesheet" href="css/app.min.css">
+  <meta charset="utf-8">
+  <title>Пасажирські перевезення</title>
+  <meta name="description" content="Пасажирські перевезення Авто-Експрес">
+  <meta name="viewport" content="width=device-width">
+  <link rel="icon" href="images/favicon.png">
+  <meta property="og:image" content="img/dest/preview.jpg">
+  <link rel="stylesheet" href="css/app.min.css">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
-<header id="header" class="header sticky-top">
-	<nav class="navbar navbar-expand-md navbar-dark px-md-5">
-		<a class="navbar-brand" href="#">
-			<img class="img-fluid" src="images/dest/logo.svg" alt="logo">
-		</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse justify-content-end px-2 text-center" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="#header">Головна <span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#about">Про нас</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Послуги</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Галерея</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Контакти</a>
-				</li>
-			</ul>
-		</div>
-	</nav>
+<header class="header sticky-top">
+  <nav class="navbar navbar-expand-md navbar-dark px-md-5">
+    <a class="navbar-brand" href="#welcome-page">
+      <img class="img-fluid" src="images/dest/logo.svg" alt="logo">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end px-2 text-center" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#welcome-page">Головна</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about">Про нас</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Послуги</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Галерея</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contacts">Контакти</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 </header>
-<section class="welcome-page">
+<section id="welcome-page" class="welcome-page">
 
-	<div class="container-md vertical-center">
-		<div class="jumbotron-fluid text-center mt-5">
-			<div class="header-h1">
-				<h1>Пасажирські перевезення по Україні</h1>
-			</div>
-			<p class="pb-5">Найлегший спосіб подорожувати</p>
-			<p>Использются служебные классы для типографики и расстояния содержимого в контейнере большего размера.</p>
-			<div class="mt-5 text-uppercase">
-				<a class="btn btn-danger btn-lg mx-3" href="#about" role="button">Знати більше</a>
-				<a class="btn btn-dark btn-lg mx-3" href="#contacts" role="button">Контакти</a>
-			</div>
-		</div>
-	</div>
+  <div class="container-md vertical-center">
+    <div class="jumbotron-fluid text-center mt-5">
+      <div class="header-h1">
+        <h1>Пасажирські перевезення по Україні</h1>
+      </div>
+      <p class="pb-5">Найлегший спосіб подорожувати</p>
+      <p>Использются служебные классы для типографики и расстояния содержимого в контейнере большего размера.</p>
+      <div class="mt-5 text-uppercase">
+        <a class="btn btn-danger btn-lg mx-3" href="#about" role="button">Знати більше</a>
+        <a class="btn btn-dark btn-lg mx-3" href="#contacts" role="button">Контакти</a>
+      </div>
+    </div>
+  </div>
 </section>
 
 <section id="about" class="about">
+  khjwuwjhkr
+</section>
+<section id="contacts" class="contacts">
 	khjwuwjhkr
 </section>
 
-
-	<script src="js/app.min.js"></script>
+<script src="js/app.min.js"></script>
 
 </body>
 </html>
