Fix font mistake

--- a/app/index.html
+++ b/app/index.html
@@ -51,9 +51,9 @@
       </div>
       <p class="pb-5">Найлегший спосіб подорожувати</p>
       <p>Использются служебные классы для типографики и расстояния содержимого в контейнере большего размера.</p>
-      <div class="mt-5 text-uppercase">
-        <a class="btn btn-danger btn-lg mx-3" href="#about" role="button">Знати більше</a>
-        <a class="btn btn-dark btn-lg mx-3" href="#contacts" role="button">Контакти</a>
+      <div class="mt-5 text-uppercase jumbotron-button-block">
+        <a class="btn btn-danger btn-lg m-2 " href="#about" role="button">Знати більше</a>
+        <a class="btn btn-dark btn-lg m-2" href="#contacts" role="button">Контакти</a>
       </div>
     </div>
   </div>
