--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,9 @@
   <meta name="viewport" content="width=device-width">
   <link rel="icon" href="images/favicon.png">
   <meta property="og:image" content="img/dest/preview.jpg">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/app.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/css/lightbox.min.css">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -30,10 +32,10 @@
           <a class="nav-link" href="#about">Про нас</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Послуги</a>
+          <a class="nav-link" href="#services">Послуги</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Галерея</a>
+          <a class="nav-link" href="#gallery">Галерея</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contacts">Контакти</a>
@@ -45,23 +47,162 @@
 <section id="welcome-page" class="welcome-page">
 
   <div class="container-md vertical-center">
-    <div class="jumbotron-fluid text-center mt-5">
+    <div class="text-center jumbotron-fluid mt-5">
       <div class="header-h1">
         <h1>Пасажирські перевезення по Україні</h1>
       </div>
       <p class="pb-5">Найлегший спосіб подорожувати</p>
       <p>Использются служебные классы для типографики и расстояния содержимого в контейнере большего размера.</p>
-      <div class="mt-5 text-uppercase jumbotron-button-block">
-        <a class="btn btn-danger btn-lg m-2 " href="#about" role="button">Знати більше</a>
-        <a class="btn btn-dark btn-lg m-2" href="#contacts" role="button">Контакти</a>
+      <div class="row justify-content-center mt-5 text-uppercase jumbotron-button-block">
+        <a class="col-sm-2 btn btn-danger btn-lg m-2 " href="#about" role="button">Знати більше</a>
+        <a class="col-sm-2 btn btn-dark btn-lg m-2" href="#contacts" role="button">Контакти</a>
       </div>
     </div>
   </div>
 </section>
 
 <section id="about" class="about">
-  khjwuwjhkr
+  <div class="container-md pt-5">
+    <h2 class="h2 text-center mb-5 pt-5">Про компанію</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dignissimos ducimus earum hic nam necessitatibus nostrum odio odit omnis similique! At corporis, dolores iste nesciunt perspiciatis quidem repellendus sunt voluptates!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dignissimos ducimus earum hic nam necessitatibus nostrum odio odit omnis similique! At corporis, dolores iste nesciunt perspiciatis quidem repellendus sunt voluptates!</p>
+    <h2 class="h2 text-center mb-5 pt-5">Наші переваги</h2>
+    <div class="about-items">
+      <div class="about-item">34</div>
+      <div class="about-item">234234</div>
+      <div class="about-item">asdfgaaaaaa</div>
+      <div class="about-item"></div>
+      <div class="about-item"></div>
+    </div>
+    <div class="row justify-content-center mt-5 pb-5 text-uppercase jumbotron-button-block">
+      <a class="text-nowrap col-sm-2 btn btn-danger btn-about btn-lg m-2" href="#contacts" role="button">Зв'язатися з нами</a>
+    </div>
+  </div>
 </section>
+
+<section id="services" class="services">
+  <div class="container-md pt-5">
+    <h2 class="h2 text-center mb-5 pt-5">Послуги</h2>
+    <div class="services-images row d-flex justify-content-center align-items-center">
+      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
+      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
+      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
+      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
+      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
+      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
+      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
+      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
+      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
+      </div>
+
+    <div class="row justify-content-center mt-5 pb-5 text-uppercase jumbotron-button-block">
+      <a class="col-sm-2 btn btn-danger btn-lg m-2" href="#contacts" role="button">Контакти</a>
+    </div>
+  </div>
+</section>
+
+<section id="gallery" class="gallery container-fluid p-0 mb-5">
+    <ul class="works-list row no-gutters">
+
+      <li class="works-item col-xl-3 col- col-md-6">
+        <a href="images/dest/bus-tumb.jpg" data-lightbox="works-image">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="works-image-thumb">
+          <div class="works-item-overlay">
+            <div class="works-item-info">
+              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
+              <p class="animated fadeInUp">User Interface Design</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="works-item col-xl-3 col-md-6">
+        <a href="images/dest/bus-tumb.jpg" data-lightbox="works-image">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="works-image-thumb">
+          <div class="works-item-overlay">
+            <div class="works-item-info">
+              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
+              <p class="animated fadeInUp">User Interface Design</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="works-item col-xl-3 col-md-6">
+        <a href=images/dest/bus-tumb.jpg" data-lightbox="works-image">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="works-image-thumb">
+          <div class="works-item-overlay">
+            <div class="works-item-info">
+              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
+              <p class="animated fadeInUp">User Interface Design</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="works-item col-xl-3 col-md-6">
+        <a href="images/works-image-4.png" data-lightbox="works-image">
+          <img class="img-fluid" src="images/works-image-thumb-4.png" alt="works-image-thumb">
+          <div class="works-item-overlay">
+            <div class="works-item-info">
+              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
+              <p class="animated fadeInUp">User Interface Design</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="works-item col-xl-3 col-md-6">
+        <a href="images/works-image-5.png" data-lightbox="works-image">
+          <img class="img-fluid" src="images/works-image-thumb-5.png" alt="works-image-thumb">
+          <div class="works-item-overlay">
+            <div class="works-item-info">
+              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
+              <p class="animated fadeInUp">User Interface Design</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="works-item col-xl-3 col-md-6">
+        <a href="images/works-image-6.png" data-lightbox="works-image">
+          <img class="img-fluid" src="images/works-image-thumb-6.png" alt="works-image-thumb">
+          <div class="works-item-overlay">
+            <div class="works-item-info">
+              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
+              <p class="animated fadeInUp">User Interface Design</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="works-item col-xl-3 col-md-6">
+        <a href="images/works-image-7.png" data-lightbox="works-image">
+          <img class="img-fluid" src="images/works-image-thumb-7.png" alt="works-image-thumb">
+          <div class="works-item-overlay">
+            <div class="works-item-info">
+              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
+              <p class="animated fadeInUp">User Interface Design</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="works-item col-xl-3 col-md-6">
+        <a href="images/works-image-8.png" data-lightbox="works-image">
+          <img class="img-fluid" src="images/works-image-thumb-8.png" alt="works-image-thumb">
+          <div class="works-item-overlay">
+            <div class="works-item-info">
+              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
+              <p class="animated fadeInUp">User Interface Design</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+    </ul>
+  </section>
+
+
 <section id="contacts" class="contacts">
 	khjwuwjhkr
 </section>
