Added servisers items opacity + gallery hover effect

--- a/app/index.html
+++ b/app/index.html
@@ -83,15 +83,60 @@
   <div class="container-md pt-5">
     <h2 class="h2 text-center mb-5 pt-5">Послуги</h2>
     <div class="services-images row d-flex justify-content-center align-items-center">
-      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
-      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
-      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
-      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
-      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
-      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
-      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
-      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
-      <div class="col-6 col-md-4 col-lg-4 mb-4"><img class="img-fluid" src="images/dest/bus-tumb.jpg" alt=""></div>
+      <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
+        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-info">
+          <p>aqsedqwe</p>
+        </div>
+      </div>
+      <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
+        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-info">
+          <p>aqsedqwe</p>
+        </div>
+      </div>
+      <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
+        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-info">
+          <p>aqsedqwe</p>
+        </div>
+      </div>
+      <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
+        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-info">
+          <p>aqsedqwe</p>
+        </div>
+      </div>
+      <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
+        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-info">
+          <p>aqsedqwe</p>
+        </div>
+      </div>
+      <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
+        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-info">
+          <p>aqsedqwe</p>
+        </div>
+      </div>
+      <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
+        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-info">
+          <p>aqsedqwe</p>
+        </div>
+      </div>
+      <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
+        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-info">
+          <p>aqsedqwe</p>
+        </div>
+      </div>
+      <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
+        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-info">
+          <p>aqsedqwe</p>
+        </div>
+      </div>
       </div>
 
     <div class="row justify-content-center mt-5 pb-5 text-uppercase jumbotron-button-block">
@@ -101,13 +146,13 @@
 </section>
 
 <section id="gallery" class="gallery container-fluid p-0 mb-5">
-    <ul class="works-list row no-gutters">
+    <ul class="gallery-list row no-gutters">
 
-      <li class="works-item col-xl-3 col- col-md-6">
-        <a href="images/dest/bus-tumb.jpg" data-lightbox="works-image">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="works-image-thumb">
-          <div class="works-item-overlay">
-            <div class="works-item-info">
+      <li class="gallery-item col-xl-3 col- col-md-6">
+        <a href="images/dest/bus-about.jpg" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus-about.jpg" alt="gallery-image-thumb">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
               <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
               <p class="animated fadeInUp">User Interface Design</p>
             </div>
@@ -115,11 +160,11 @@
         </a>
       </li>
 
-      <li class="works-item col-xl-3 col-md-6">
-        <a href="images/dest/bus-tumb.jpg" data-lightbox="works-image">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="works-image-thumb">
-          <div class="works-item-overlay">
-            <div class="works-item-info">
+      <li class="gallery-item col-xl-3 col- col-md-6">
+        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
               <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
               <p class="animated fadeInUp">User Interface Design</p>
             </div>
@@ -127,11 +172,11 @@
         </a>
       </li>
 
-      <li class="works-item col-xl-3 col-md-6">
-        <a href=images/dest/bus-tumb.jpg" data-lightbox="works-image">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="works-image-thumb">
-          <div class="works-item-overlay">
-            <div class="works-item-info">
+      <li class="gallery-item col-xl-3 col- col-md-6">
+        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
               <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
               <p class="animated fadeInUp">User Interface Design</p>
             </div>
@@ -139,11 +184,11 @@
         </a>
       </li>
 
-      <li class="works-item col-xl-3 col-md-6">
-        <a href="images/works-image-4.png" data-lightbox="works-image">
-          <img class="img-fluid" src="images/works-image-thumb-4.png" alt="works-image-thumb">
-          <div class="works-item-overlay">
-            <div class="works-item-info">
+      <li class="gallery-item col-xl-3 col- col-md-6">
+        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
               <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
               <p class="animated fadeInUp">User Interface Design</p>
             </div>
@@ -151,11 +196,11 @@
         </a>
       </li>
 
-      <li class="works-item col-xl-3 col-md-6">
-        <a href="images/works-image-5.png" data-lightbox="works-image">
-          <img class="img-fluid" src="images/works-image-thumb-5.png" alt="works-image-thumb">
-          <div class="works-item-overlay">
-            <div class="works-item-info">
+      <li class="gallery-item col-xl-3 col- col-md-6">
+        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
               <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
               <p class="animated fadeInUp">User Interface Design</p>
             </div>
@@ -163,11 +208,11 @@
         </a>
       </li>
 
-      <li class="works-item col-xl-3 col-md-6">
-        <a href="images/works-image-6.png" data-lightbox="works-image">
-          <img class="img-fluid" src="images/works-image-thumb-6.png" alt="works-image-thumb">
-          <div class="works-item-overlay">
-            <div class="works-item-info">
+      <li class="gallery-item col-xl-3 col- col-md-6">
+        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
               <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
               <p class="animated fadeInUp">User Interface Design</p>
             </div>
@@ -175,11 +220,11 @@
         </a>
       </li>
 
-      <li class="works-item col-xl-3 col-md-6">
-        <a href="images/works-image-7.png" data-lightbox="works-image">
-          <img class="img-fluid" src="images/works-image-thumb-7.png" alt="works-image-thumb">
-          <div class="works-item-overlay">
-            <div class="works-item-info">
+      <li class="gallery-item col-xl-3 col- col-md-6">
+        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
               <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
               <p class="animated fadeInUp">User Interface Design</p>
             </div>
@@ -187,11 +232,11 @@
         </a>
       </li>
 
-      <li class="works-item col-xl-3 col-md-6">
-        <a href="images/works-image-8.png" data-lightbox="works-image">
-          <img class="img-fluid" src="images/works-image-thumb-8.png" alt="works-image-thumb">
-          <div class="works-item-overlay">
-            <div class="works-item-info">
+      <li class="gallery-item col-xl-3 col- col-md-6">
+        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
               <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
               <p class="animated fadeInUp">User Interface Design</p>
             </div>
