Added contact-left section

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
     </div>
   </nav>
 </header>
+
 <section id="welcome-page" class="welcome-page">
 
   <div class="container-md vertical-center">
@@ -145,10 +146,13 @@
   </div>
 </section>
 
-<section id="gallery" class="gallery container-fluid p-0 mb-5">
-    <ul class="gallery-list row no-gutters">
+<section id="gallery" class="gallery container-fluid p-0">
+  <div class="container-md pt-5">
+    <h2 class="h2 text-center mb-5 pt-5">Наш автопарк</h2>
+  </div>
+    <ul class="gallery-list row no-gutters row d-flex justify-content-center align-items-center">
 
-      <li class="gallery-item col-xl-3 col- col-md-6">
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
         <a href="images/dest/bus-about.jpg" data-lightbox="gallery-image">
           <img class="img-fluid" src="images/dest/bus-about.jpg" alt="gallery-image-thumb">
           <div class="gallery-item-overlay">
@@ -160,7 +164,7 @@
         </a>
       </li>
 
-      <li class="gallery-item col-xl-3 col- col-md-6">
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
         <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
           <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
           <div class="gallery-item-overlay">
@@ -172,7 +176,7 @@
         </a>
       </li>
 
-      <li class="gallery-item col-xl-3 col- col-md-6">
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
         <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
           <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
           <div class="gallery-item-overlay">
@@ -184,7 +188,7 @@
         </a>
       </li>
 
-      <li class="gallery-item col-xl-3 col- col-md-6">
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
         <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
           <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
           <div class="gallery-item-overlay">
@@ -196,7 +200,7 @@
         </a>
       </li>
 
-      <li class="gallery-item col-xl-3 col- col-md-6">
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
         <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
           <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
           <div class="gallery-item-overlay">
@@ -208,7 +212,7 @@
         </a>
       </li>
 
-      <li class="gallery-item col-xl-3 col- col-md-6">
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
         <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
           <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
           <div class="gallery-item-overlay">
@@ -220,7 +224,7 @@
         </a>
       </li>
 
-      <li class="gallery-item col-xl-3 col- col-md-6">
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
         <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
           <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
           <div class="gallery-item-overlay">
@@ -232,7 +236,7 @@
         </a>
       </li>
 
-      <li class="gallery-item col-xl-3 col- col-md-6">
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
         <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
           <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
           <div class="gallery-item-overlay">
@@ -249,7 +253,41 @@
 
 
 <section id="contacts" class="contacts">
-	khjwuwjhkr
+	<div class="container flex text-center align-content-center justify-content-center">
+    <div class="row">
+      <div class="contacts-phone col-6">
+        <h2 class="h2 text-center mb-5 pt-5">Є питання?</h2>
+        <ul class="contacts-list text-left">
+          <li class="row align-items-center my-3">
+            <img class="img-fluid mr-3" src="images/dest/logo-time.png" alt="">
+            <span>07:00 - 20:30</span>
+          </li>
+          <li class="row align-items-center my-3">
+            <img class="img-fluid mr-3" src="images/dest/logo-kievstar.png" alt="">
+            <span>(097) 480 24 28</span>
+          </li>
+          <li class="row align-items-center my-3">
+            <img class="img-fluid mr-3" src="images/dest/logo-vodafone.png" alt="">
+            <span>(099) 078 20 21</span>
+          </li>
+          <li class="row align-items-center my-3">
+            <img class="img-fluid mr-3" src="images/dest/logo-lifecell.png" alt="">
+            <span>(093) 966 09 40</span>
+          </li>
+          <li class="row align-items-center mt-3">
+            <img class="img-fluid mr-3" src="images/dest/logo-lifecell.png" alt="">
+            <span>вул. Митницька 7/2</span>
+          </li>
+          <li class="row align-items-center">
+            <span>м. Черкаси</span>
+          </li>
+
+        </ul>
+      </div>
+      <div class="contacts-map col-6">2</div>
+    </div>
+
+  </div>
 </section>
 
 <script src="js/app.min.js"></script>
