--- a/app/index.html
+++ b/app/index.html
@@ -146,7 +146,7 @@
   </div>
 </section>
 
-<section id="gallery" class="gallery container-fluid p-0">
+<section id="gallery" class="gallery container-fluid p-0 mb-5">
   <div class="container-md pt-5">
     <h2 class="h2 text-center mb-5 pt-5">Наш автопарк</h2>
   </div>
@@ -253,42 +253,56 @@
 
 
 <section id="contacts" class="contacts">
-	<div class="container flex text-center align-content-center justify-content-center">
-    <div class="row">
-      <div class="contacts-phone col-6">
+	<div class="container-lg flex text-center align-content-center justify-content-center">
+    <div class="row no-gutters">
+      <div class="contacts-phone col- col-md-6">
         <h2 class="h2 text-center mb-5 pt-5">Є питання?</h2>
-        <ul class="contacts-list text-left">
-          <li class="row align-items-center my-3">
-            <img class="img-fluid mr-3" src="images/dest/logo-time.png" alt="">
+        <ul class="contacts-list">
+          <li class="row align-items-center justify-content-center justify-content-md-start my-3">
+            <img class="img-fluid mr-2" src="images/dest/logo-time.png" alt="">
             <span>07:00 - 20:30</span>
           </li>
-          <li class="row align-items-center my-3">
-            <img class="img-fluid mr-3" src="images/dest/logo-kievstar.png" alt="">
+          <li class="row align-items-center justify-content-center justify-content-md-start my-3">
+            <img class="img-fluid mr-2" src="images/dest/logo-kievstar.png" alt="">
             <span>(097) 480 24 28</span>
           </li>
-          <li class="row align-items-center my-3">
-            <img class="img-fluid mr-3" src="images/dest/logo-vodafone.png" alt="">
+          <li class="row align-items-center justify-content-center justify-content-md-start my-3">
+            <img class="img-fluid mr-2" src="images/dest/logo-vodafone.png" alt="">
             <span>(099) 078 20 21</span>
           </li>
-          <li class="row align-items-center my-3">
-            <img class="img-fluid mr-3" src="images/dest/logo-lifecell.png" alt="">
+          <li class="row align-items-center justify-content-center justify-content-md-start my-3">
+            <img class="img-fluid mr-2" src="images/dest/logo-lifecell.png" alt="">
             <span>(093) 966 09 40</span>
           </li>
-          <li class="row align-items-center mt-3">
-            <img class="img-fluid mr-3" src="images/dest/logo-lifecell.png" alt="">
+          <li class="row align-items-center justify-content-center justify-content-md-start my-3">
+            <img class="map-mark img-fluid mr-2" src="images/dest/map-mark.png" alt="">
             <span>вул. Митницька 7/2</span>
           </li>
-          <li class="row align-items-center">
-            <span>м. Черкаси</span>
+          <li class="row align-items-center justify-content-center justify-content-md-start my-3">
+            <span class="ml-md-5">м. Черкаси</span>
           </li>
 
         </ul>
+        <div class="row justify-content-center mt-5 pb-5 text-uppercase contacts-button">
+          <a class="text-nowrap col-sm-2 btn btn-danger btn-about btn-lg m-2" href="https://avto-ekspres.com/" target="_blank" role="button">Забронювати квитки</a>
+        </div>
       </div>
-      <div class="contacts-map col-6">2</div>
+      <div class="contacts-map col- col-md-6">
+        <iframe class="w-100 h-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d917.2751244567756!2d32.070718771088046!3d49.438289904681945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcfd95278d99b1d72!2z0JDQstGC0L7QtdC60YHQv9GA0LXRgS3Qp9C10YDQutCw0YHQuA!5e0!3m2!1sru!2sua!4v1584875356485!5m2!1sru!2sua" width="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
     </div>
 
   </div>
 </section>
+
+<footer class="container-fluid px-md-5 d-flex justify-content-between align-items-center">
+  <a class="navbar-brand" href="#welcome-page">
+    <img class="img-fluid" src="images/dest/logo.svg" alt="logo">
+  </a>
+  <span class="text-white">2020/All rights reserved</span>
+  <button id="toTop" class="btn btn-danger"><span>^</span></button>
+
+</footer>
 
 <script src="js/app.min.js"></script>
 
