Added some text

--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
         <h1>Пасажирські перевезення по Україні</h1>
       </div>
       <p class="pb-5">Найлегший спосіб подорожувати</p>
-      <p>Использются служебные классы для типографики и расстояния содержимого в контейнере большего размера.</p>
+      <p>Транспортна компанія "АВТО-ЕКСПРЕС" надає послуги пасажирських перевезень. Ми даємо Вам можливість безпечних подорожей країною.</p>
       <div class="row justify-content-center mt-5 text-uppercase jumbotron-button-block">
         <a class="col-sm-2 btn btn-danger btn-lg m-2 " href="#about" role="button">Знати більше</a>
         <a class="col-sm-2 btn btn-dark btn-lg m-2" href="#contacts" role="button">Контакти</a>
@@ -67,12 +67,12 @@
     <h2 class="h2 text-center mb-5 pt-5">Про компанію</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dignissimos ducimus earum hic nam necessitatibus nostrum odio odit omnis similique! At corporis, dolores iste nesciunt perspiciatis quidem repellendus sunt voluptates!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dignissimos ducimus earum hic nam necessitatibus nostrum odio odit omnis similique! At corporis, dolores iste nesciunt perspiciatis quidem repellendus sunt voluptates!</p>
     <h2 class="h2 text-center mb-5 pt-5">Наші переваги</h2>
-    <div class="about-items">
-      <div class="about-item">34</div>
-      <div class="about-item">234234</div>
-      <div class="about-item">asdfgaaaaaa</div>
-      <div class="about-item"></div>
-      <div class="about-item"></div>
+    <div class="about-items text-center">
+      <div class="about-item">Досвід роботи</div>
+      <div class="about-item">Безпека та надійність</div>
+      <div class="about-item">Комфорт</div>
+      <div class="about-item">Чіткий графік руху</div>
+      <div class="about-item">Бронювання місць</div>
     </div>
     <div class="row justify-content-center mt-5 pb-5 text-uppercase jumbotron-button-block">
       <a class="text-nowrap col-sm-2 btn btn-danger btn-about btn-lg m-2" href="#contacts" role="button">Зв'язатися з нами</a>
@@ -87,19 +87,19 @@
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
         <div class="services-info">
-          <p>aqsedqwe</p>
+          <p>Пасажирські перевезення по Україні</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
         <div class="services-info">
-          <p>aqsedqwe</p>
+          <p>Оренда автобуса на екскурсїі</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
         <div class="services-info">
-          <p>aqsedqwe</p>
+          <p>Тури на море</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
@@ -157,7 +157,31 @@
           <img class="img-fluid" src="images/dest/bus-about.jpg" alt="gallery-image-thumb">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
+              <h5 class="upper-text mb-1 animated fadeInDown">Mercedes Benz Sprinter 313CDI</h5>
+              <p class="animated fadeInUp">8 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h5 class="upper-text mb-1 animated fadeInDown">Mercedes Benz</h5>
+              <p class="animated fadeInUp">15 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h5 class="upper-text mb-1 animated fadeInDown">Project Name</h5>
               <p class="animated fadeInUp">User Interface Design</p>
             </div>
           </div>
@@ -169,7 +193,7 @@
           <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
+              <h5 class="upper-text mb-1 animated fadeInDown">Project Name</h5>
               <p class="animated fadeInUp">User Interface Design</p>
             </div>
           </div>
@@ -181,7 +205,7 @@
           <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
+              <h5 class="upper-text mb-1 animated fadeInDown">Project Name</h5>
               <p class="animated fadeInUp">User Interface Design</p>
             </div>
           </div>
@@ -193,7 +217,7 @@
           <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
+              <h5 class="upper-text mb-1 animated fadeInDown">Project Name</h5>
               <p class="animated fadeInUp">User Interface Design</p>
             </div>
           </div>
@@ -205,7 +229,7 @@
           <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
+              <h5 class="upper-text mb-1 animated fadeInDown">Project Name</h5>
               <p class="animated fadeInUp">User Interface Design</p>
             </div>
           </div>
@@ -217,31 +241,7 @@
           <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
-              <p class="animated fadeInUp">User Interface Design</p>
-            </div>
-          </div>
-        </a>
-      </li>
-
-      <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
-          <div class="gallery-item-overlay">
-            <div class="gallery-item-info">
-              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
-              <p class="animated fadeInUp">User Interface Design</p>
-            </div>
-          </div>
-        </a>
-      </li>
-
-      <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
-          <div class="gallery-item-overlay">
-            <div class="gallery-item-info">
-              <h3 class="upper-text mb-1 animated fadeInDown">Project Name</h3>
+              <h5 class="upper-text mb-1 animated fadeInDown">Project Name</h5>
               <p class="animated fadeInUp">User Interface Design</p>
             </div>
           </div>
